<resources>
    <string name="app_name">MyDoctor</string>
    <!--Falta cambiar para las imagenes, horarios, fechas, por lo mientras esta en string -->
    <string name="lbl_nombre">Nombre</string>
    <string name="lbl_padecimiento">Padecimiento</string>
    <string name="lbl_fotoEnvase">Foto Envase</string>
    <string name="lbl_fotoMedicamento">Foto Medicamento</string>
    <string name="lbl_horario">Horario</string>
    <string name="lbl_dosis">Dosis</string>
    <string name="lbl_periodo">Periodo</string>
    <string name="lbl_nombreDoctor">Nombre Doctor</string>
    <string name="APP_KEY">6cypsaij21159ui</string>
    <string name="sign_in">Sign in</string>
    <string name="btn_agregarMedicamento">Agregar</string>
    <string name="title_activity_ver_farmacias">Map</string>


    <string name="action_settings">Settings</string>
    <string name="time_picker_example">Time Picker Example</string>
    <string name="time_pick">Pick the time and press save button</string>
    <string name="time_save">Save</string>
    <string name="time_selected"></string>
    <string name="time_current">The Time is:</string>
    <string name="title_activity_periodo">PeriodoActivity</string>

    <!-- Arreglo para spinner de periodo de tiempo del tratamiento-->
    <string-array name="periodos">
        <item>Día(s)</item>
        <item>Semana(s)</item>
        <item>Mes(es)</item>
        <item>Año(s)</item>
    </string-array>

    <!-- Arreglo para spinner de dosis de medicamento del tratamiento-->
    <string-array name="dosis">
        <item>miligramos</item>
        <item>mililitros</item>
    </string-array>
    <string name="title_activity_login">Sign in</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
</resources>
