<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AgregarMedicamentoActivity"
    tools:layout_editor_absoluteY="81dp">


    <EditText
        android:id="@+id/txt_nombre"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="96dp"
        android:layout_marginBottom="44dp"
        android:hint="@string/lbl_nombre"
        app:layout_constraintBottom_toTopOf="@+id/txt_padecimiento"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/txt_padecimiento"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:hint="@string/lbl_padecimiento"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/buttonHorario"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="31dp"
        android:layout_marginRight="31dp"
        android:layout_marginBottom="35dp"
        android:onClick="continuar"
        android:text="Continuar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />


    <EditText
        android:id="@+id/txt_nombreDoctor"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:hint="@string/lbl_nombreDoctor"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_padecimiento" />

    <Button
        android:id="@+id/buttonVerCalendario"
        android:layout_width="142dp"
        android:layout_height="1dp"
        android:layout_marginTop="32dp"
        android:layout_marginBottom="29dp"
        android:hint="@string/lbl_nombreDoctor"
        android:onClick="onClickButton"
        android:text="@string/btn_agregarMedicamento"
        app:layout_constraintBottom_toBottomOf="@+id/txt_nombre"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="33dp"
        android:layout_marginLeft="33dp"
        android:layout_marginBottom="16dp"
        android:text="Registra un medicamento"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/txt_nombre"
        app:layout_constraintStart_toStartOf="parent" />
    app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="35dp"
        android:layout_marginLeft="35dp"
        android:layout_marginBottom="36dp"
        android:onClick="cancelar"
        android:text="Cancelar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


</android.support.constraint.ConstraintLayout>